@@ -1,6 +1,8 @@
 Version 1.7.6
 - BUG: Issue #209: repo browser doesn't
        handle putty session names. (Stefan)
+- BUG: Issue #216: Apply patch marks deleted
+       files as "missing". (Stefan)
 
 Version 1.7.5
 - BUG: Issue #184: Refresh in log dialog only refreshes
